playbooks/cluster/templates/manifests/01-management/03-diun/05-diun.yml
---
# headless service
apiVersion: v1
kind: Service
metadata:
  name: diun
  namespace: diun
  labels:
    kalexlab.xyz/app: diun
spec:
  clusterIP: None
  selector:
    kalexlab.xyz/app: diun
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: diun
  name: diun
  labels:
    kalexlab.xyz/app: diun
spec:
  serviceName: diun
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: diun
  template:
    metadata:
      labels:
        kalexlab.xyz/app: diun
    spec:
      serviceAccountName: diun
      containers:
        - name: diun
          image: crazymax/diun:latest
          imagePullPolicy: Always
          args: ["serve"]

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false

          resources:
            requests:
              memory: 30Mi
              cpu: 1m
            limits:
              memory: 150Mi
              cpu: 50m

          volumeMounts:
            - mountPath: /data
              name: diun-pvc
            - mountPath: /etc/diun
              name: diun-conf
              readOnly: true
            - mountPath: /etc/secrets
              name: diun-secrets
              readOnly: true

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      restartPolicy: Always
      volumes:
        - name: diun-conf
          configMap:
            name: diun-conf
            items:
              - key: diun.yml
                path: diun.yml
        - name: diun-secrets
          secret:
            secretName: diun-secrets
            items:
              - key: notif_telegram_token
                path: notif/telegram/token
              - key: notif_telegram_chatids
                path: notif/telegram/chatids
              - key: regopts_registry_username
                path: regopts/registry.kalexlab.xyz/username
              - key: regopts_registry_password
                path: regopts/registry.kalexlab.xyz/password

  volumeClaimTemplates:
    - metadata:
        name: diun-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
